feat: added leaderboard

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
-    <title>gem puzzle</title>
+    <title>Gem Puzzle</title>
 </head>
 
 <body>
   <div class="header">
-    <h1 class="title">Gem puzzle</h1>
+    <h1 class="title">Gem Puzzle</h1>
     <div class="status-bar">
       <div class="counter">Moves: 0</div>
       <div class="timer">Time: 00:00</div>
@@ -46,12 +46,12 @@
         <select name="field-size" id="field-size">
           <option value="9">3x3</option>
           <option value="16" selected>4x4</option>
-          <option value="25">5x5</option>
-          <option value="36">6x6</option>
         </select>
       </div>
+      <a href="#" class="popup-records__open">Best Scores</a>
     </div>
     <div class="end-of-game">Congratulations! You won!</div>
+    <div class="popup-records"></div>
   </div>
   <div class="control-panel">
     <button class="settings-button">Settings</button>
